working demo agent, 2 sample chals

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
 LITELLM_BASE_URL=https://cyclonus.gtisc.gatech.edu:41414/
-LITELLM_API_KEY=(Your team key here)
+LITELLM_API_KEY=sk-your-team-key-here
